<resources>
    <string name="app_name">myscanerIPTV</string>
</resources>
